--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,26 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <% if user_signed_in? %>
+          <%= link_to '書籍一覧', books_path %>
+          <%= link_to 'ユーザーページ', users_show_path %>
+          <%= link_to 'プロフィール編集', edit_user_registration_path %>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: "are you sure?" } %>
+        <% else %>
+          <%= link_to "サインアップ", new_user_registration_path %>
+          <%= link_to "ログイン", new_user_session_path %>
+        <% end %>
+      </nav>
+    </header>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
+
+
+
