--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <nav>
         <% if user_signed_in? %>
           <%= link_to '書籍一覧', books_path %>
-          <%= link_to 'ユーザーページ', users_show_path %>
+          <%= link_to 'ユーザーページ', users_path %>
           <%= link_to 'プロフィール編集', edit_user_registration_path %>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: t('confirm.are_you_sure') } %>
         <% end %>
