ActiveStorageで画像アップロードを実装

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong><%= Book.human_attribute_name(:picture) %>:</strong>
-  <%= image_tag(@book.picture_url) if @book.picture.present? %>
+  <strong><%= Book.human_attribute_name(:image) %>:</strong>
+  <%= image_tag(@book.image) if @book.image.present? %>
 </p>
 
 <%= link_to t('link.edit'), edit_book_path(@book) %> |
