--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :picture %>
-    <%= form.file_field :picture %>
+    <%= form.label :image %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="actions">
