--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,9 +5,9 @@
     <li>
       <%= link_to user.name, user_path(user.id) %>
       <% if user.followed_by?(current_user) %>
-        <%= link_to "フォロー解除", user_relationships_path(user.id), method: :delete %>
+        <%= link_to "フォロー解除", user_follows_path(user.id), method: :delete %>
       <% else %>
-        <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+        <%= link_to "フォローする", user_follows_path(user.id), method: :post %>
       <% end %>
     </li>
     <% end %>
