--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,10 +1,8 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Reports</h1>
-
 <table>
   <thead>
     <tr>
+      <th>Date</th>
       <th>Title</th>
       <th>Body</th>
       <th colspan="3"></th>
@@ -14,6 +12,7 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
+        <td><%= report.created_at %></td>
         <td><%= report.title %></td>
         <td><%= report.body %></td>
         <td><%= link_to 'Show', report %></td>
