--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Report</h1>
-
+<h1>日報作成</h1>
+<p>現在のユーザー: <%= @current_user.name %></p>
 <%= render 'form', report: @report %>
 
-<%= link_to 'Back', reports_path %>
+<%= link_to t('link.back'), user_path(current_user) %>
