--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,14 +1,14 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>Title:</strong>
+  <strong><%= Book.human_attribute_name(:title) %>:</strong>
   <%= @report.title %>
 </p>
 
 <p>
-  <strong>Body:</strong>
+  <strong><%= Book.human_attribute_name(:body) %>:</strong>
   <%= @report.body %>
 </p>
 
-<%= link_to 'Edit', edit_report_path(@report) %> |
-<%= link_to 'Back', reports_path %>
+<% if current_user.id == @report.user_id %>
+  <%= link_to 'Edit', edit_report_path(@report) %> |
+<% end %>
+<%= link_to 'Back', user_path(@report.user_id) %>
