--- a/app/views/shared/_books.html.erb
+++ b/app/views/shared/_books.html.erb
@@ -15,6 +15,7 @@
         <td><%= book.title %></td>
         <td><%= book.memo %></td>
         <td><%= book.author %></td>
+        <td><%= link_to t("link.show"), book %></td>
       </tr>
     <% end %>
   </tbody>
