--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,4 +1,5 @@
-<h1>日報作成</h1>
+<h1><%= t("title.new_report") %></h1>
+
 <p>現在のユーザー: <%= @current_user.name %></p>
 <%= render 'form', report: @report %>
 
