--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,9 +23,11 @@
 
 <h2>コメント</h2>
 <% @book.comments.each do |comment| %>
-<%= comment.body %>
-<% if current_user.id == comment.user_id %>
-  <%= link_to '削除', book_comment_path(@book.id, comment.id), method: :delete, data: { confirm: t("confirm.are_you_sure") } %>
+  <%= comment.body %>
+  by
+  <%= comment.user.name %>
+<% if current_user == comment.user %>
+  <%= link_to '削除', book_comment_path(@book, comment), method: :delete, data: { confirm: t("confirm.are_you_sure") } %>
 <% end %>
 <hr>
 <% end %>
