--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,4 +1,4 @@
-<h2>Followings</h2>
+<h1>フォローの中ユーザー</h1>
 <ul>
   <% @users.each do |following| %>
     <li><%= link_to following.name, user_path(following.id) %></li>
