“デプロイできてるかテスト”

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t("title.books") %></h1>
+<h1><%= t("title.books") %>だよん</h1>
 <p>現在のユーザー: <%= current_user.name %></p>
 
 <div class="pagination">
